--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1533,11 +1533,6 @@ else
 fi
 echo "$ac_t$hardcode_action" 1>&6
 
-if test "$hardcode_action" = relink || test "$shlibpath_overrides_rpath" = yes; then
-  # Fast installation is not supported/necessary
-  fast_install=no
-fi
-
 
 reload_flag=
 reload_cmds='$LD$reload_flag -o $output$reload_objs'
@@ -1872,6 +1867,13 @@ echo "$ac_t$enable_shared" 1>&6
 test "$enable_shared" = yes || enable_static=yes
 
 echo "checking whether to build static libraries... $enable_static" 1>&6
+
+if test "$hardcode_action" = relink ||
+   test "$shlibpath_overrides_runpath" = yes ||
+   test "$enable_shared" = no; then
+  # Fast installation is not supported/necessary
+  enable_fast_install=no
+fi
 
 echo $ac_n "checking for objdir... $ac_c" 1>&6
 rm -f .libs 2>/dev/null
