--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1868,11 +1868,13 @@ test "$enable_shared" = yes || enable_static=yes
 
 echo "checking whether to build static libraries... $enable_static" 1>&6
 
-if test "$hardcode_action" = relink ||
-   test "$shlibpath_overrides_runpath" = yes ||
-   test "$enable_shared" = no; then
-  # Fast installation is not supported/necessary
+if test "$hardcode_action" = relink; then
+  # Fast installation is not supported
   enable_fast_install=no
+elif test "$shlibpath_overrides_runpath" = yes ||
+     test "$enable_shared" = no; then
+  # Fast installation is not necessary
+  enable_fast_install=needless
 fi
 
 echo $ac_n "checking for objdir... $ac_c" 1>&6
