--- a/ltmain.in
+++ b/ltmain.in
@@ -2538,15 +2538,15 @@ static const void *lt_preloaded_setup() {
 	# AGH! Flame the AIX and HP-UX people for me, will ya?
 	$echo "$modename: warning: this platform does not like uninstalled shared libraries" 1>&2
 	$echo "$modename: \`$output' will be relinked during installation" 1>&2
-      elif test "$shlibpath_overrides_rpath" = yes; then
-	# Fast installation is not necessary
-	link_command="$finalize_var$compile_command$finalize_rpath"
-	relink_command=
       else
-	if test "$fast_install" = yes; then
+	if test "$fast_install" != no; then
 	  link_command="$finalize_var$compile_command$finalize_rpath"
-	  relink_command="$compile_var$compile_command$compile_rpath"
-	  relink_command=`echo "X$relink_command" | $Xsed -e 's%@OUTPUT@%\$progdir/\$file%g'`
+	  if test "$fast_install" = yes; then
+	    relink_command=`echo "X$compile_var$compile_command$compile_rpath" | $Xsed -e 's%@OUTPUT@%\$progdir/\$file%g'`
+	  else
+	    # needless
+	    relink_command=
+	  fi
 	else
 	  link_command="$compile_var$compile_command$compile_rpath"
 	  relink_command="$finalize_var$finalize_command$finalize_rpath"
