* TODO: updated (libltdl build problem fixed) * doc/libtool.texi (libltdl interface): removed the line which   promised that lt_dlopen will return NULL if it can't resolve all   symbols * libltdl/Makefile.am, libltdl/configure.in: fixed build problem:   renamed the convenience library to libltdlc.la and the   installed version to libltdl.la * ltmain.in (wrapper script): replaced the "T" suffix of the program   file name with a "lt-" prefix * mdemo/Makefile.am: use libltdlc.la * tests/Makefile.am, tests/demo-nofast.test: added demo to   test --enable-fast-install=no

--- a/ltmain.in
+++ b/ltmain.in
@@ -2676,7 +2676,7 @@ else
 
 	if test "$fast_install" = yes; then
 	  echo >> $output "\
-  program='$outputname'T
+  program=lt-'$outputname'
   progdir=\"\$thisdir/$objdir\"
   
   if test ! -f \"\$progdir/\$program\" || \\
