--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -6,14 +6,11 @@ AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
 
-TOINST=toinst
-AC_SUBST(TOINST)
-
 AC_ARG_ENABLE(ltdl-install,
   [--enable-ltdl-install     install libltdl])
 AM_CONDITIONAL(INSTALL_LTDL, test x$enable_ltdl_install = xyes)
 if test x$enable_ltdl_install = xyes; then
-  LIBLIBS=$TOINST/libltdl.la
+  LIBLIBS=libltdl.la
 else
   LIBLIBS=
 fi
