--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,6 +19,8 @@ TESTS = demo-static.test demo-make.test demo-exec.test \
 	mdemo-shared.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	cdemo-shared.test cdemo-make.test cdemo-exec.test \
+	demo-nofast.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test \
 	link.test link-2.test nomode.test \
 	quote.test sh.test suffix.test
 
