* libltdl/Makefile.am, libltdl/configure.in, mdemo/Makefile.am: libltdl must not be renamed; if there's a problem with the install option, let's fix it, not just work around it by breaking code of users of the convenience library

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -10,18 +10,21 @@ else
 noinst_HEADERS = ltdl.h
 endif
 
-EXTRA_LTLIBRARIES = libltdl.la
-
-lib_LTLIBRARIES = @LIBLIBS@
-noinst_LTLIBRARIES = libltdlc.la
+noinst_LTLIBRARIES = libltdl.la
 
 libltdl_la_SOURCES = ltdl.c
-libltdl_la_LDFLAGS = $(LTDL_VERSION) -rpath $(libdir) 
 libltdl_la_LIBADD = $(LIBADD_DL)
 
-libltdlc_la_SOURCES = $(libltdl_la_SOURCES)
-libltdlc_la_LDFLAGS =
-libltdlc_la_LIBADD = $(libltdl_la_LIBADD)
+lib_LTLIBRARIES = @LIBLIBS@
+EXTRA_LTLIBRARIES =
+
+@TOINST@/libltdl.la: $(libltdl_la_OBJECTS) $(libltdl_la_DEPENDENCIES)
+	@test -d $(TOINST) || mkdir $(TOINST)
+	$(LINK) -o $@ $(libltdl_la_OBJECTS) \
+		-rpath $(libdir) $(LTDL_VERSION) $(libltdl_la_LIBADD)
+
+distclean-local:
+	test -z $(TOINST) || rm -rf $(TOINST)
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
