* libtool.m4 (AC_LIBLTDL_INSTALLABLE, AC_LIBLTDL_CONVENIENCE): new macros * NEWS: ditto * libltdl/configure.in: if none of the new macros or configure arguments are used, warn and build convenience library only * libltdl/Makefile.am: conditionally build convenience libltdl.la * mdemo/configure.in: use AC_LIBLTDL_CONVENIENCE * mdemo/Makefile.am: refer to @LIBLTDL@

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -10,7 +10,9 @@ else
 noinst_HEADERS = ltdl.h
 endif
 
+if CONVENIENCE_LTDL
 noinst_LTLIBRARIES = libltdl.la
+endif
 
 libltdl_la_SOURCES = ltdl.c
 libltdl_la_LIBADD = $(LIBADD_DL)
