--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -6,24 +6,13 @@ AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
 
-TOINST=toinst
-AC_SUBST(TOINST)
-
 if test -z "$enable_ltdl_install$enable_ltdl_convenience"; then
-  AC_MSG_WARN([*** Neither AC_LIBLTDL_INSTALLABLE nor AC_LIBLTDL_CONVENIENCE were used])
-  AC_MSG_WARN([*** in configure.in; building convenience library for backward])
-  AC_MSG_WARN([*** compatibility.  This is deprecated, and will not work in the future])
-  enable_ltdl_convenience=yes
+  AC_MSG_WARN([*** Neither [A""C_LIBLTDL_INSTALLABLE] nor [A""C_LIBLTDL_CONVENIENCE] were used])
+  AC_MSG_ERROR([*** in the top-level configure.in; aborting])
 fi
 
 AC_ARG_ENABLE(ltdl-install,
   [--enable-ltdl-install     install libltdl])
-if test x"$enable_ltdl_install" != xno; then
-  LIBLIBS=$TOINST/libltdl.la
-else
-  LIBLIBS=
-fi
-AC_SUBST(LIBLIBS)
 
 AM_CONDITIONAL(INSTALL_LTDL, test x"$enable_ltdl_install" != xno)
 AM_CONDITIONAL(CONVENIENCE_LTDL, test x"$enable_ltdl_convenience" != xno)
